--- a/output/controlsets.tex
+++ b/output/controlsets.tex
@@ -5,9 +5,9 @@
 \label{tab:pselectvars}
 \begin{tabular}{C{5cm} C{5cm} C{5cm}}
 \toprule
-\textbf{Maternal IQ}			& \textbf{Maternal education}		& Mother's age at birth \\
-High Risk Index		& Parent income			& Premature birth \\
-1 minute Apgar score	& 5 minute Apgar score	& Mother married \\
+Maternal IQ			& Maternal education		& Mother's age at birth \\
+\textbf{High Risk Index}		& Parent income			& Premature birth \\
+\textbf{1 minute Apgar score}	& \textbf{5 minute Apgar score}	& Mother married \\
 Teen pregnancy		& \textbf{Father at home}			& Number of siblings \\
 Cohort 				& Mother is employed		& \\
 \bottomrule
