new sensitivity analysis to controls sets

--- a/output/controlsets.tex
+++ b/output/controlsets.tex
@@ -8,7 +8,7 @@
 Maternal IQ			& Maternal education		& Mother's age at birth \\
 \textbf{High Risk Index}		& Parent income			& Premature birth \\
 \textbf{1 minute Apgar score}	& \textbf{5 minute Apgar score}	& Mother married \\
-Teen pregnancy		& \textbf{Father at home}			& Number of siblings \\
+Teen pregnancy		& Father at home		& Number of siblings \\
 Cohort 				& Mother is employed		& \\
 \bottomrule
 \end{tabular}
