pretty abc table

--- a/output/abc_predict.tex
+++ b/output/abc_predict.tex
@@ -3,7 +3,7 @@
  & abcZ & abcZL \\
 VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
  &  &  \\
-male & 16,042.901* & -624.472 \\
+Male & 16,042.901* & -624.472 \\
  & (8,375.189) & (5,384.686) \\
 m\_ed0y &  & -3,390.346 \\
  &  & (2,246.745) \\
