--- a/output/abc_predict.tex
+++ b/output/abc_predict.tex
@@ -3,10 +3,10 @@
  & abcZ & abcZL \\
 VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
  &  &  \\
-Male & 16,042.901* & -624.472 \\
- & (8,375.189) & (5,384.686) \\
-m\_ed0y &  & -3,390.346 \\
- &  & (2,246.745) \\
+male & 15,127.641* & -624.472 \\
+ & (7,850.718) & (5,384.686) \\
+m\_ed0y & 2,136.666 & -3,390.346 \\
+ & (2,151.633) & (2,246.745) \\
 piatmath &  & -37.091 \\
  &  & (389.874) \\
 years\_30y &  & 10,107.368*** \\
@@ -15,11 +15,9 @@ si21y\_inc\_labor &  & 0.270 \\
  &  & (0.296) \\
 si34y\_bmi &  & -320.535 \\
  &  & (241.455) \\
-m\_ed1y6m & 4,635.701** &  \\
- & (1,895.257) &  \\
-Constant & -29,128.514 & -52,896.960 \\
- & (21,648.429) & (32,236.828) \\
+Constant & 2,165.045 & -52,896.960 \\
+ & (23,054.657) & (32,236.828) \\
  &  &  \\
-Observations & 122 & 76 \\
- R-squared & 0.056 & 0.312 \\ \hline
+Observations & 132 & 76 \\
+ R-squared & 0.035 & 0.312 \\ \hline
 \end{tabular}
